objects/Tour_Plans__c.object
<CustomObject>
    <label>Tour Plans</label>
    <nameField>
        <displayFormat>TP-{00000}</displayFormat>
        <label>Tour Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tour Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>UserSH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tour Plan Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TourPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Enter End Date</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval/Rejected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>SentForApproval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Completed/Freezed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Day_Tour_Plan__c</fullName>
        <formula>(End_Date__c  -  Start_Date__c)+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Day Tour Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_for_Cancellation__c</fullName>
        <label>Reason for Cancellation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Check_User_And_Manager_ID__c</fullName>
        <formula>IF( $User.Id =  UserSH__r.Id , True, False)</formula>
        <label>Check User And Manager ID</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>